// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Component should render correctly 1`] = `
<ThemeProvider
  theme={
    Object {
      "deviceType": "DESKTOP",
      "hasRightGutter": 1100,
      "theme": Object {
        "primaryColor": "whitesmoke",
      },
      "zIndex": Object {
        "zFilter": 100,
        "zFilterActions": 400,
        "zFilterList": 150,
        "zFlyout": 200,
        "zLoader": 1000,
        "zMenu": 800,
        "zNativeTickSelectIcon": 50,
        "zOverlay": 900,
        "zPlacesAutocomplete": 1100,
        "zSticky": 700,
      },
    }
  }
>
  <main>
    <Head>
      <meta
        content="initial-scale=1.0, minimum-scale=1.0, width=device-width, shrink-to-fit=no"
        name="viewport"
      />
      <meta
        content="#000"
        name="theme-color"
      />
    </Head>
    <div>
      HELLO
    </div>
  </main>
</ThemeProvider>
`;

exports[`Layout Component should render the styled component appropriately 1`] = `
.c0 {
  width: 978px;
  padding: 0 10px;
  -webkit-transition: -webkit-transform 0.1s ease-in-out;
  -webkit-transition: transform 0.1s ease-in-out;
  transition: transform 0.1s ease-in-out;
  height: 100vh;
  -webkit-transform: translate3d(calc(85% + 6px),0,0);
  -ms-transform: translate3d(calc(85% + 6px),0,0);
  transform: translate3d(calc(85% + 6px),0,0);
  position: relative;
  overflow-x: visible;
}

@media (max-width:1200px) and (min-width:768px) {
  .c0 {
    margin-left: auto;
  }
}

<Layoutstyle
  deviceType="MOBILE"
  isNavigationDrawerOpen={true}
  topBanner="TOPBANNER"
>
  <StyledComponent
    deviceType="MOBILE"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Layoutstyle-xq0jqi-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "width:",
            [Function],
            ";padding:",
            [Function],
            ";transition:transform 0.1s ease-in-out;height:",
            [Function],
            ";transform:",
            [Function],
            ";position:",
            [Function],
            ";@media (max-width:1200px) and (min-width:768px){margin-left:",
            [Function],
            ";}@media (max-width:1070px){",
            [Function],
            ";",
            [Function],
            ";}overflow-x:",
            [Function],
            ";",
          ],
        },
        "displayName": "Layoutstyle",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Layoutstyle-xq0jqi-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    isNavigationDrawerOpen={true}
    topBanner="TOPBANNER"
  >
    <div
      className="c0"
    >
      <div>
        HELLO
      </div>
    </div>
  </StyledComponent>
</Layoutstyle>
`;

exports[`Layout Component should render when deviceType is Mobile 1`] = `
<ThemeProvider
  theme={
    Object {
      "deviceType": "MOBILE",
      "hasRightGutter": false,
      "theme": Object {
        "primaryColor": "whitesmoke",
      },
      "zIndex": Object {
        "zFilter": 100,
        "zFilterActions": 400,
        "zFilterList": 150,
        "zFlyout": 200,
        "zLoader": 1000,
        "zMenu": 800,
        "zNativeTickSelectIcon": 50,
        "zOverlay": 900,
        "zPlacesAutocomplete": 1100,
        "zSticky": 700,
      },
    }
  }
>
  <main>
    <Head>
      <meta
        content="initial-scale=1.0, minimum-scale=1.0, width=device-width, shrink-to-fit=no"
        name="viewport"
      />
      <meta
        content="#000"
        name="theme-color"
      />
    </Head>
    <div>
      HELLO
    </div>
  </main>
</ThemeProvider>
`;
